...
              ),
            ),
            const SizedBox(
              height: 10,
            ),
            const Text(
              'Pendiente de revisión',
              textAlign: TextAlign.left,
              style: TextStyle(
                  fontSize: 30,
                  decoration: TextDecoration.none,
                  fontWeight: FontWeight.bold,
                  color: Colors.black,
...
                  decorationColor: Colors.blue),
            ),
            const SizedBox(
              height: 20,
            ),
            ElevatedButton(
              key: Key('logout-from-approval'),
              style: ElevatedButton.styleFrom(
                minimumSize: const Size(double.infinity, 50),
              ),
              onPressed: () {
                LogoutUser()();
              },
...
